# richMaker

./: .gitignore  README.md  manage.py  pyproject.toml  채팅창확인을_생활화합시다
ai/: analytics.py  main.py  preprocessing.ipynb
ai/data/: labor_code.csv
articles/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_account_minus_info.py  0002_remove_accountminus_challenge.py
config/: settings.py  urls.py
users/: admin.py  models.py  serializer.py  social.py  test.py  tests.py  urls.py  validated.py  views.py
users/migrations/: 0001_initial.py
